--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sally's To-Do List</title>
+    <title>To-Do List</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>To-Do List</h1>
+        <h1>Sally's To-Do List</h1>
 
         <!-- Task Input Section -->
         <div class="input-container">
