--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <body>
     <div class="container">
         <h1>Sally's To-Do List</h1>
-
         <!-- Task Input Section -->
         <div class="input-container">
             <input type="text" id="taskInput" placeholder="Add a new task...">
@@ -23,10 +22,15 @@
                 <option value="medium">Medium</option>
                 <option value="low">Low</option>
             </select>
+            <select id="categorySelect"> <!-- New: Category Dropdown -->
+                <option value="work">Work</option>
+                <option value="personal">Personal</option>
+                <option value="shopping">Shopping</option>
+                <option value="other">Other</option>
+            </select>
             <input type="date" id="dueDateInput">
             <button id="addTaskBtn">+</button>
         </div>
-
         <!-- Search & Filter Section -->
         <div class="filter-container">
             <input type="text" id="searchInput" placeholder="Search tasks...">
@@ -36,17 +40,14 @@
                 <option value="completed">Completed</option>
             </select>
         </div>
-
         <!-- Task List -->
         <ul id="taskList"></ul>
-
         <!-- Progress Bar -->
         <div class="progress-bar">
             <div id="progressFill"></div>
         </div>
         <p id="progressText">0% Completed</p>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
