--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
             <button id="addTaskBtn">+</button>
         </div>
 
-        <!-- Filter and Sorting Buttons -->
+        <!-- Filter Buttons -->
         <div class="filter-container">
             <select id="filterSelect">
                 <option value="all">All</option>
                 <option value="pending">Pending</option>
                 <option value="completed">Completed</option>
             </select>
-            <button id="sortByDateBtn">Sort by Due Date</button>
         </div>
 
         <!-- Search Bar -->
