--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <!-- Theme Toggle Button -->
         <div class="theme-toggle">
-            <button id="toggleThemeBtn">Toggle Dark Mode</button>
+            <button id="toggleThemeBtn">☀️</button>
         </div>
 
         <!-- Input Section -->
