--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Sally-Todo-List</h1>
+        <h1>Abu-Todo-List</h1>
 
         <!-- Theme Toggle Button -->
         <div class="theme-toggle">
